# pyschematron

./: .coveragerc  .gitchangelog.rc  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  Makefile  README.rst  README_tmp.rst  cliff.toml  pyproject.toml  setup.py  todo  tox.ini
pyschematron/: __init__.py  __version__.py  api.py  builders.py  cli.py  config.py  elements.py  executers.py  notes  parser.py  schematron.py  tatsu_experiments.py  utils.py  xml_writer.py
pyschematron/cli_scripts/: __init__.py
pyschematron/data/templates/xml/: let.xml.jinja2  report.xml.jinja2  rule.xml.jinja2  rule_message.xml.jinja2
pyschematron/direct_mode/: __init__.py  api.py  ast.py  utils.py
pyschematron/direct_mode/lib/: __init__.py  ast.py  ast_visitors.py  ast_yaml.py  utils.py
pyschematron/direct_mode/parsers/xml/: builders.py  parser.py
pyschematron/direct_mode/processor/: bound_schema.py  executers.py  processor.py  query_bindings.py  schema.py
pyschematron/direct_mode/processor/queries/: base.py  factories.py  xpath_elementpath.py  xpath_query_binding.py
pyschematron/direct_mode/processor/query_bindings/: __init__.py  base.py  xpath.py
pyschematron/direct_mode/schematron/: __init__.py  ast.py  ast_visitors.py  ast_yaml.py  utils.py
pyschematron/direct_mode/schematron/parsers/xml/: __init__.py  builders.py  parser.py  utils.py
pyschematron/direct_mode/svrl/: __init__.py  ast.py  report.py  svrl_ast.py  svrl_nodes.py  svrl_report.py  svrl_visitors.py  xml_writer.py
pyschematron/direct_mode/validators/: bound_schema.py  reports.py  utils.py  validation_results.py  validators.py
pyschematron/direct_mode/validators/queries/: base.py  factories.py  xpath.py  xpath_query_binding.py
pyschematron/direct_mode/xml_validation/: validators.py
pyschematron/direct_mode/xml_validation/queries/: __init__.py  base.py  exceptions.py  factories.py  xpath.py
pyschematron/direct_mode/xml_validation/results/: __init__.py  svrl_builder.py  validation_results.py  xml_nodes.py
pyschematron/parsers/: ast.py
pyschematron/parsers/ast_to_elements/: __init__.py  parser.py
pyschematron/parsers/xml/: __init__.py  builders.py  parser.py  utils.py
pyschematron/parsers/xml_to_ast/: builders.py  parser.py  utils.py
pyschematron_old/: __init__.py  builders.py  cli.py  elements.py  parser.py  xml_writer.py
pyschematron_old/data/templates/xml/: assert.xml.jinja2  pattern.xml.jinja2  report.xml.jinja2
scripts/: ast_loading.py  bugtest.py  demo_ast.py  demo_custom_functions.py  demo_validation.py  elementpath_bug.py  elementpath_bug2.py  elementpath_test.py  generic_test_script.py  github_problem.py  query_binding.py  validation.py  validation_using_full_api.py  validation_using_functions.py  validation_using_simple_api.py
tests/: test_pyschematron.py
tests/fixtures/: README.rst  extends_example.xml  pattern_include_example.xml  rule_include_example.xml
tests/fixtures/full_example/: abstract_extends.sch  cargo.xml  check_weights.sch  diagnostics.sch  schema.sch
tests/unit/: test_parsers.py
