[project]
name = "pyschematron"
description = "Schematron validation in Python."
readme = "README.rst"
version = "1.1.0"
requires-python = ">=3.12"
keywords = ["Schematron", "XML validation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.12",
]
license = { file="LICENSE" }
authors = [
    { name = "Robbert Harms", email = "robbert@xkls.nl" }
]
dependencies = [
    "xmlschema~=3.0.2",
    "elementpath~=4.6.0",
    "typer[all]~=0.9.0",
    "appdirs~=1.4.4",
    "lxml~=5.2.1",
    "Jinja2~=3.1.3",
    "ruyaml~=0.91.0",
    "frozendict~=2.4.0"
]

[project.optional-dependencies]
test = [
    "pytest~=8.0.2",
    "pytest-check~=2.3.1",
    "pytest-cov~=4.1.0",
    "pytest-html~=4.1.1",
    "tox~=4.14.1"
]
doc = [
    "sphinx~=7.2.6"
]

[project.scripts]
pyschematron = "pyschematron.cli:app"

[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"
